--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,10 +27,10 @@
     "gitignore": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
-    "prisma": "^6.10.1",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.9"
+    "@types/cookie-parser": "^1.4.9",
+    "prisma": "^6.11.1"
   }
 }
